EWMA and midday analysis

--- a/air_analysis.ipynb
+++ b/air_analysis.ipynb
@@ -81,6 +81,7 @@
     "measurements = {1:'SO2',6:'CO',7:'NO',8:'NO2',10:'PM10',12:'NOx',14:'O3',44:'NMHC'}\n",
     "check_times = ['H01','H02','H03','H04','H05','H06','H07','H08','H09','H10','H11','H12','H13','H14','H15','H16','H17','H18','H19','H20','H21','H22','H23']\n",
     "check_times_peak = ['H07','H08','H09','H10','H18','H19','H20','H21']\n",
+    "check_times_mid = ['H11','H12','H13','H14']\n",
     "\n",
     "hours = range(1,25)"
    ]
@@ -322,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -810,16 +811,11 @@
       "\n",
       "\n",
       "Sample: SO2\n",
-      "Barajas\n",
-      "\tNo data for this sample and location\n",
-      "Plaza de Castilla\n",
-      "\tNo data for this sample and location\n",
-      "Pº de la Castellana\n",
-      "\tNo data for this sample and location\n",
-      "Retiro\n",
-      "\tNo data for this sample and location\n",
-      "El Pardo\n",
-      "\tNo data for this sample and location\n"
+      "[Barajas] No data for this sample and location\n",
+      "[Plaza de Castilla] No data for this sample and location\n",
+      "[Pº de la Castellana] No data for this sample and location\n",
+      "[Retiro] No data for this sample and location\n",
+      "[El Pardo] No data for this sample and location\n"
      ]
     },
     {
@@ -841,18 +837,12 @@
       "\n",
       "\n",
       "Sample: CO\n",
-      "Barajas\n",
-      "\tNo data for this sample and location\n",
-      "Plaza de Castilla\n",
-      "\tNo data for this sample and location\n",
-      "Pº de la Castellana\n",
-      "\tNo data for this sample and location\n",
-      "Cuatro Caminos\n",
-      "\tNo data for this sample and location\n",
-      "Retiro\n",
-      "\tNo data for this sample and location\n",
-      "El Pardo\n",
-      "\tNo data for this sample and location\n"
+      "[Barajas] No data for this sample and location\n",
+      "[Plaza de Castilla] No data for this sample and location\n",
+      "[Pº de la Castellana] No data for this sample and location\n",
+      "[Cuatro Caminos] No data for this sample and location\n",
+      "[Retiro] No data for this sample and location\n",
+      "[El Pardo] No data for this sample and location\n"
      ]
     },
     {
@@ -916,14 +906,10 @@
       "\n",
       "\n",
       "Sample: PM10\n",
-      "Barajas\n",
-      "\tNo data for this sample and location\n",
-      "Plaza de España\n",
-      "\tNo data for this sample and location\n",
-      "Retiro\n",
-      "\tNo data for this sample and location\n",
-      "El Pardo\n",
-      "\tNo data for this sample and location\n"
+      "[Barajas] No data for this sample and location\n",
+      "[Plaza de España] No data for this sample and location\n",
+      "[Retiro] No data for this sample and location\n",
+      "[El Pardo] No data for this sample and location\n"
      ]
     },
     {
@@ -966,12 +952,9 @@
       "\n",
       "\n",
       "Sample: O3\n",
-      "Plaza de Castilla\n",
-      "\tNo data for this sample and location\n",
-      "Pº de la Castellana\n",
-      "\tNo data for this sample and location\n",
-      "Cuatro Caminos\n",
-      "\tNo data for this sample and location\n"
+      "[Plaza de Castilla] No data for this sample and location\n",
+      "[Pº de la Castellana] No data for this sample and location\n",
+      "[Cuatro Caminos] No data for this sample and location\n"
      ]
     },
     {
@@ -993,20 +976,13 @@
       "\n",
       "\n",
       "Sample: NMHC\n",
-      "Barajas\n",
-      "\tNo data for this sample and location\n",
-      "Plaza de Castilla\n",
-      "\tNo data for this sample and location\n",
-      "Pº de la Castellana\n",
-      "\tNo data for this sample and location\n",
-      "Cuatro Caminos\n",
-      "\tNo data for this sample and location\n",
-      "Plaza de España\n",
-      "\tNo data for this sample and location\n",
-      "Retiro\n",
-      "\tNo data for this sample and location\n",
-      "El Pardo\n",
-      "\tNo data for this sample and location\n"
+      "[Barajas] No data for this sample and location\n",
+      "[Plaza de Castilla] No data for this sample and location\n",
+      "[Pº de la Castellana] No data for this sample and location\n",
+      "[Cuatro Caminos] No data for this sample and location\n",
+      "[Plaza de España] No data for this sample and location\n",
+      "[Retiro] No data for this sample and location\n",
+      "[El Pardo] No data for this sample and location\n"
      ]
     },
     {
@@ -1063,6 +1039,84 @@
     "            label.set_visible(False)\n",
     "        plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Sample: SO2\n",
+      "[Barajas] No data for this sample and location\n",
+      "[Plaza de Castilla] No data for this sample and location\n",
+      "[Pº de la Castellana] No data for this sample and location\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'check_times_mid' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-20-290c3e4eed25>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     18\u001b[0m             \u001b[0mdays_m\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'NUMDIA'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 20\u001b[1;33m             \u001b[0mall_times\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcheck_times_mid\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     21\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcheck_times_peak\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m                 \u001b[0mall_times\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_numeric\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall_times\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'check_times_mid' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Plotting the average value for each day DURING MIDDAY\n",
+    "# Using Exponentially Weighted Moving Average (EMA)\n",
+    "\n",
+    "matplotlib.rcParams['figure.figsize'] = (11, 11)\n",
+    "\n",
+    "for m_code,m_name in measurements.items():\n",
+    "    days_m = []\n",
+    "    places = []\n",
+    "    print('\\n\\nSample: ' + m_name)\n",
+    "    for code, location in check_places.items():\n",
+    "        df = all_data.loc[(all_data['MAGNITUD']==m_code) & (all_data['PUNTO_MUESTREO'].str.contains(code))].copy()\n",
+    "        \n",
+    "        if df.shape[0] != 0:\n",
+    "            # Get the number of days\n",
+    "            df.sort_values(['MES','DIA'])\n",
+    "            df = df.reset_index()\n",
+    "            df['NUMDIA'] = df.index\n",
+    "            days_m = df['NUMDIA'].copy()\n",
+    "            \n",
+    "            all_times = df[check_times_mid].copy()\n",
+    "            for t in check_times_peak:\n",
+    "                all_times[t] = pd.to_numeric(all_times[t])\n",
+    "            all_times['MEDIO'] = all_times.mean(axis=1)\n",
+    "            all_times_ema = all_times['MEDIO'].ewm(span=10).mean()\n",
+    "            plt.plot(days_m,all_times_ema)\n",
+    "            places.append(location)\n",
+    "        else:\n",
+    "            print('[{}] No data for this sample and location'.format(location))\n",
+    "    \n",
+    "    if len(places)>0:\n",
+    "        plt.legend(places)\n",
+    "        plt.xticks(days)        \n",
+    "        plt.xlabel('# Days')\n",
+    "        plt.ylabel('Measurement')\n",
+    "        plt.title('Average levels of ' + m_name + ' (midday)')\n",
+    "        ax = plt.gca()\n",
+    "        for label in ax.get_xaxis().get_ticklabels()[1::2]:\n",
+    "            label.set_visible(False)\n",
+    "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
